--- a/style.css
+++ b/style.css
@@ -18,14 +18,21 @@ header {
     grid-template-columns: 1fr
 }
 
+h2 {
+    font-size: 5rem;
+    text-transform: uppercase;
+}
+
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
+.legenda {
+    display: block;
+}
 .top-bar--wrapper {
-    background-color: grey;
     width: 100%;
     padding: 1rem 2rem;
 
@@ -34,7 +41,7 @@ ul {
     align-items: flex-start;
 }
 
-.top-bar--wrapper h6,
+.top-bar--wrapper h5,
 .top-bar--wrapper p {
     margin: 0;
 }
@@ -46,7 +53,7 @@ ul {
 .nav-list {
     position: relative;
     width: 80%;
-    /* max-width: 800px; */
+    max-width: 1000px;
     margin: auto;
     
     display: grid;
@@ -62,67 +69,116 @@ ul {
         font-size: 5rem;
     }
 }
+
 @media screen and (min-width: 1350px) {
-    .nav-list {
+    /* .nav-list {
         font-size: 6rem;
-    }
+    } */
+}
+
+header .row {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.nav-list span {
+    display: none;
 }
 
 @media screen and (min-width: 880px) {
-    .nav-list {
-        grid-template-columns: repeat(10, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+    header .row {
+        flex-direction: row;
+    }
+
+    .nav-list span {
+        display: inline-block;
+        width: 100%;
+        height: 78%;
+        border: 0.7px solid rgba(0, 0, 0, .5);
+        /* background-color: red; */
     }
 }
 
-.nav-item.historia {
-    grid-column: 1 / 5;
-    /* background-color: blue; */
+header .row-1,
+header .row-3 {
+    justify-content: space-between;
 }
 
-.nav-item.historia::after {
-    /* grid-row: 1 / 1; */
-    grid-column: 4 / span 3;
-    grid-row: 1 / 1;
+header .row-2,
+header .row-4 {
+    justify-content: space-around;
+}
+
+.header-graphic {
+    position: relative;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    height: 1rem;
+    width: 50%;
+    margin: auto;
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,0) 45%, rgba(0,0,0,1) 50%, rgba(255,255,255,0) 55%);
+}
+
+.header-graphic::before {
     position: absolute;
     content: '';
-    top: 0;
-    width: 100%;
-    border: 0.7px solid rgba(0, 0, 0, .5);
-    height: 77%;
-    margin: auto 10px;
-    /* background-color: green; */
-}
-
-.nav-item.projetos {
-    grid-column: -1 / 6;
-    text-align: right;
-    /* background-color: red; */
-}
-
-.nav-item.servicos {
-    grid-column: 3 / 7;
-    text-align: center;
-}
-
-.nav-item.clientes {
-    grid-column: 1 / 5
-}
-
-.nav-item.estrutura {
-    grid-column: 5 / -1;
-    text-align: right;
-}
-
-.nav-item.fornecedores {
-    grid-column: 3 / -1;
-    text-align: center;
-}
-
-header .svg-placeholder {
-    background-color: black;
+    width: 2rem;
     height: 2rem;
-    width: 30%;
-    margin: auto;
+    left: 50%;
+    transform: translateX(-50%) translateY(-30%);
+    background-color: orange;
+    z-index: -1;
+}
+
+.historia-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+        "historia-titulo historia-titulo"
+        "historia-graphic historia-graphic"
+        "historia-texto historia-texto"
+        "historia-image historia-image"
+    ;
+}
+
+.historia-graphic {
+    grid-area: historia-graphic;
+    background-color: red;
+    min-height: 5rem;
+}
+
+.historia-title--wrapper {
+    grid-area: historia-titulo;
+    text-align: right;
+}
+
+.historia-text--wrapper {
+    grid-area: historia-texto;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.historia-image {
+    grid-area: historia-image;
+    background-color: orange;
+    text-align: right;
+}
+
+@media screen and (min-width: 740px) {
+    .historia-section {
+        grid-template-areas: 
+            "historia-graphic historia-titulo"
+            " . historia-texto"
+            "historia-image historia-image"
+        ;
+    }
+
+    .historia-text--wrapper {
+        flex-direction: row;
+    }
 }
 
