--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --min-padding: 2rem;
+}
+
 body {
     box-sizing: border-box;
     padding: 0;
@@ -18,8 +22,18 @@ header {
     grid-template-columns: 1fr
 }
 
+section {
+    max-width: 1050px;
+    margin: auto
+}
+
 h2 {
-    font-size: 5rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+}
+
+h3 {
+    font-size: 2rem;
     text-transform: uppercase;
 }
 
@@ -32,9 +46,10 @@ ul {
 .legenda {
     display: block;
 }
+
 .top-bar--wrapper {
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem var(--min-padding);
 
     display: flex;
     justify-content: space-between;
@@ -162,10 +177,19 @@ header .row-4 {
     gap: 1rem;
 }
 
+.historia-title--wrapper,
+.historia-text--wrapper {
+    padding: 0 var(--min-padding);
+}
+
 .historia-image {
     grid-area: historia-image;
     background-color: orange;
     text-align: right;
+}
+
+.historia-section .legenda {
+    margin-right: 2rem;
 }
 
 @media screen and (min-width: 740px) {
@@ -182,3 +206,270 @@ header .row-4 {
     }
 }
 
+.projetos-section {
+    margin-top: 5rem;
+    /* margin-top: 5rem; */
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.projetos-section p {
+    text-align: justify;
+}
+
+.projetos-grid--container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.projetos-grid--container > * {
+    margin: 0;
+}
+
+.projetos-grid--container span.legenda {
+    margin-top: 1rem;
+    text-align: right;
+}
+
+.projetos-grid--container small.legenda {
+    margin-left: var(--min-padding);
+}
+
+.title {
+    letter-spacing: .4rem;
+}
+
+.timeline {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    text-align: right;
+    position: relative;
+    margin-right: var(--min-padding);
+}
+
+.timeline >  *:not(.logo) {
+    margin-right: 1rem;
+}
+
+.timeline .logo::before {
+    position: absolute;
+    content: '';
+    height: 85%;
+    top: 4.5%;
+    bottom: 0;
+    right: 1rem;
+
+    background-color: black;
+    width: 1px;
+}
+
+@media screen and (min-width: 750px) {
+    .projetos-section {
+        flex-direction: row;
+    }
+}
+
+@media screen and (min-width: 800px) {
+    .projetos-grid--container {
+        display: grid;
+        aspect-ratio: 1 / 1;
+        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-rows: repeat(90, minmax(0, 1fr));
+        gap: 0;
+    }
+
+    .title {
+        line-height: 1;
+        grid-column: 5 / 15;
+        grid-row: 1 / 3;
+
+        font-size: 4rem;
+    }
+    
+    .subtitle {
+        line-height: 1.3;
+        grid-column: 31 / 48;
+        grid-row: 1 / 15;
+
+        font-size: 1.5rem;
+    }
+    
+    .p1 {
+        grid-column: 5 / 25;
+        grid-row: 22 / 35;
+    }
+    
+    .p2 {
+        grid-column: 5 / 25;
+        grid-row: 37 / 50;
+    }
+    
+    .p3 {
+        grid-column: 28 / 48;
+        grid-row: 22 / 60;
+    }
+    
+    .p4 {
+        grid-column: 28 / 48;
+        grid-row: 60 / -1;
+    }
+    
+    .image {
+        grid-column: 1 / 25;
+        grid-row: 60 / -1;
+        background-color: black;
+        border: 1px solid black;
+    }
+}
+
+@media screen and (min-width: 860px) {
+    .projetos-grid--container {
+        display: grid;
+        aspect-ratio: 1 / 1;
+        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-rows: repeat(25, minmax(0, 1fr));
+        gap: 0;
+    }
+
+    .title {
+        grid-column: 7 / 15;
+        grid-row: 1 / 3;
+
+        font-size: 5rem;
+    }
+    
+    .subtitle {
+        grid-column: 28 / 48;
+        grid-row: 4 / 6;
+    }
+    
+    .p1 {
+        grid-column: 8 / 25;
+        grid-row: 9 / 30;
+    }
+    
+    .p2 {
+        grid-column: 8 / 25;
+        grid-row: 13 / 35;
+    }
+    
+    .p3 {
+        grid-column: 28 / 48;
+        grid-row: 9 / 35;
+    }
+    
+    .p4 {
+        grid-column: 28 / 48;
+        grid-row: 20 / -1;
+    }
+    
+    .image {
+        grid-column: 1 / 25;
+        grid-row: 18 / -1;
+        background-color: black;
+        border: 1px solid black;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .projetos-grid--container {
+        display: grid;
+        aspect-ratio: 1 / 1;
+        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-rows: repeat(20, minmax(0, 1fr));
+        gap: 0;
+    }
+
+    .title {
+        grid-column: 7 / 15;
+        grid-row: 1 / 3;
+
+        font-size: 5rem;
+    }
+    
+    .subtitle {
+        grid-column: 28 / 48;
+        grid-row: 3 / 6;
+    }
+    
+    .p1 {
+        grid-column: 8 / 25;
+        grid-row: 6 / 30;
+    }
+    
+    .p2 {
+        grid-column: 8 / 25;
+        grid-row: 9 / 35;
+    }
+    
+    .p3 {
+        grid-column: 28 / 48;
+        grid-row: 6 / 35;
+    }
+    
+    .p4 {
+        grid-column: 28 / 48;
+        grid-row: 13 / -1;
+    }
+    
+    .image {
+        grid-column: 1 / 25;
+        grid-row: 13 / -1;
+        background-color: black;
+        border: 1px solid black;
+    }
+}
+
+@media screen and (min-width: 990px) {
+    .projetos-grid--container {
+        display: grid;
+        aspect-ratio: 1 / 1;
+        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-rows: repeat(15, minmax(0, 1fr));
+        gap: 0;
+    }
+
+    .title {
+        line-height: .9;
+        grid-column: 7 / 15;
+        grid-row: 1 / 3;
+    }
+    
+    .subtitle {
+        grid-column: 28 / 47;
+        grid-row: 3 / 6;
+
+        font-size: 2rem;
+    }
+    
+    .p1 {
+        grid-column: 11 / 25;
+        grid-row: 4 / 30;
+    }
+    
+    .p2 {
+        grid-column: 11 / 25;
+        grid-row: 6 / 35;
+    }
+    
+    .p3 {
+        grid-column: 28 / 47;
+        grid-row: 6 / 35;
+    }
+    
+    .p4 {
+        grid-column: 28 / 45;
+        grid-row: 10 / -1;
+    }
+    
+    .image {
+        grid-column: 1 / 25;
+        grid-row: 9 / -1;
+        background-color: black;
+        border: 1px solid black;
+    }
+}
