--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --min-padding: 2rem;
+    --min-padding: 5rem;
 }
 
 body {
@@ -23,8 +23,8 @@ header {
 }
 
 section {
-    max-width: 1050px;
-    margin: auto
+    /* max-width: 1050px; */
+    margin-top: 5rem;
 }
 
 h2 {
@@ -76,7 +76,7 @@ ul {
     row-gap: 1rem;
 
     text-transform: uppercase;
-    font-size: 4rem;
+    /* font-size: 4rem; */
 }
 
 @media screen and (min-width: 1150px) {
@@ -150,12 +150,12 @@ header .row-4 {
 .historia-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
         "historia-titulo historia-titulo"
         "historia-graphic historia-graphic"
         "historia-texto historia-texto"
-        "historia-image historia-image"
-    ;
+        "historia-image historia-image";
 }
 
 .historia-graphic {
@@ -175,17 +175,29 @@ header .row-4 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+}
+
+.historia-text--wrapper > .text {
+    flex-basis: fit-content;
 }
 
 .historia-title--wrapper,
 .historia-text--wrapper {
-    padding: 0 var(--min-padding);
+    padding-right: var(--min-padding);
 }
 
 .historia-image {
     grid-area: historia-image;
-    background-color: orange;
+    background: rgb(255,255,255);
+background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, rgba(255,177,0,1) 30%);
     text-align: right;
+}
+
+.historia-image img {
+    background-color: black;
+    width: 80vw;
+    height: 100vh;
 }
 
 .historia-section .legenda {
@@ -207,11 +219,10 @@ header .row-4 {
 }
 
 .projetos-section {
-    margin-top: 5rem;
-    /* margin-top: 5rem; */
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 0 var(--min-padding)
 }
 
 .projetos-section p {
@@ -239,6 +250,11 @@ header .row-4 {
 
 .title {
     letter-spacing: .4rem;
+    font-size: 4rem;
+}
+
+.subtitle {
+    font-size: 1.5rem;
 }
 
 .timeline {
@@ -283,19 +299,14 @@ header .row-4 {
     }
 
     .title {
-        line-height: 1;
         grid-column: 5 / 15;
         grid-row: 1 / 3;
-
-        font-size: 4rem;
     }
     
     .subtitle {
         line-height: 1.3;
         grid-column: 31 / 48;
         grid-row: 1 / 15;
-
-        font-size: 1.5rem;
     }
     
     .p1 {
@@ -328,16 +339,16 @@ header .row-4 {
 
 @media screen and (min-width: 860px) {
     .projetos-grid--container {
-        display: grid;
+        /* display: grid;
         aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-columns: repeat(50, minmax(0, 1fr)); */
         grid-template-rows: repeat(25, minmax(0, 1fr));
-        gap: 0;
+        /* gap: 0; */
     }
 
     .title {
         grid-column: 7 / 15;
-        grid-row: 1 / 3;
+        /* grid-row: 1 / 3; */
 
         font-size: 5rem;
     }
@@ -358,90 +369,90 @@ header .row-4 {
     }
     
     .p3 {
-        grid-column: 28 / 48;
+        /* grid-column: 28 / 48; */
         grid-row: 9 / 35;
     }
     
     .p4 {
-        grid-column: 28 / 48;
+        /* grid-column: 28 / 48; */
         grid-row: 20 / -1;
     }
     
     .image {
-        grid-column: 1 / 25;
+        /* grid-column: 1 / 25; */
         grid-row: 18 / -1;
-        background-color: black;
-        border: 1px solid black;
+        /* background-color: black;
+        border: 1px solid black; */
     }
 }
 
 @media screen and (min-width: 900px) {
     .projetos-grid--container {
-        display: grid;
+        /* display: grid;
         aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-columns: repeat(50, minmax(0, 1fr)); */
         grid-template-rows: repeat(20, minmax(0, 1fr));
-        gap: 0;
+        /* gap: 0; */
     }
 
-    .title {
+    /* .title {
         grid-column: 7 / 15;
         grid-row: 1 / 3;
 
         font-size: 5rem;
-    }
+    } */
     
     .subtitle {
-        grid-column: 28 / 48;
+        /* grid-column: 28 / 48; */
         grid-row: 3 / 6;
     }
     
     .p1 {
-        grid-column: 8 / 25;
+        /* grid-column: 8 / 25; */
         grid-row: 6 / 30;
     }
     
     .p2 {
-        grid-column: 8 / 25;
+        /* grid-column: 8 / 25; */
         grid-row: 9 / 35;
     }
     
     .p3 {
-        grid-column: 28 / 48;
+        /* grid-column: 28 / 48; */
         grid-row: 6 / 35;
     }
     
     .p4 {
-        grid-column: 28 / 48;
-        grid-row: 13 / -1;
+        /* grid-column: 28 / 48; */
+        grid-row: 14 / -1;
     }
     
     .image {
-        grid-column: 1 / 25;
+        /* grid-column: 1 / 25; */
         grid-row: 13 / -1;
-        background-color: black;
-        border: 1px solid black;
+        /* background-color: black;
+        border: 1px solid black; */
     }
 }
 
 @media screen and (min-width: 990px) {
     .projetos-grid--container {
-        display: grid;
+        /* display: grid;
         aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr));
+        grid-template-columns: repeat(50, minmax(0, 1fr)); */
         grid-template-rows: repeat(15, minmax(0, 1fr));
-        gap: 0;
+        /* gap: 0; */
     }
 
     .title {
         line-height: .9;
-        grid-column: 7 / 15;
-        grid-row: 1 / 3;
+        /* grid-column: 7 / 15; */
+        /* grid-row: 1 / 3; */
     }
     
     .subtitle {
         grid-column: 28 / 47;
-        grid-row: 3 / 6;
+        /* grid-row: 3 / 6; */
 
         font-size: 2rem;
     }
@@ -458,7 +469,7 @@ header .row-4 {
     
     .p3 {
         grid-column: 28 / 47;
-        grid-row: 6 / 35;
+        /* grid-row: 6 / 35; */
     }
     
     .p4 {
@@ -467,9 +478,64 @@ header .row-4 {
     }
     
     .image {
-        grid-column: 1 / 25;
+        /* grid-column: 1 / 25; */
         grid-row: 9 / -1;
-        background-color: black;
-        border: 1px solid black;
+        /* background-color: black;
+        border: 1px solid black; */
     }
+}
+
+.realizacoes-section,
+.clientes-section,
+.fornecedores-section {
+    padding: 0 var(--min-padding);
+}
+
+.realizacoes-section > *,
+.clientes-section > *,
+.fornecedores-section > * {
+    margin: 0;
+}
+
+.realizacoes-section .title {
+    text-align: right;
+    word-break: break-all;
+}
+
+.realizacoes-section .subtitle {
+    /* position: relative; */
+    font-size: 2.5rem;
+}
+
+/* .realizacoes-section .subtitle::before {
+    position: absolute;
+    content: '';
+    border: 0.7px solid rgba(0, 0, 0, .5);
+    height: 300px;
+    width: 300px;
+    top: -1rem;
+    left: -1rem;
+}
+
+.realizacoes-section .subtitle::after {
+    position: absolute;
+    content: '◼';
+    color: orange;
+    font-size: 200%;
+    width: 300%;
+    height: 1px;
+    left: calc(300px - 1rem);
+    top: 50%;
+    background-color: rgba(0, 0, 0, .5);
+} */
+
+.big-number {
+    text-align: center;
+    font-size: 12rem;
+    margin: 2rem auto;
+}
+
+.medium-number {
+    text-align: right;
+    font-size: 9rem;
 }
