--- a/style.css
+++ b/style.css
@@ -1,18 +1,41 @@
 @import url(https://db.onlinewebfonts.com/c/8ee93ab6e2cd0e81a9ed137d534ac8ab?family=Albra+Grotesk+Medium-Traced-Web);
 
+@import url("https://use.typekit.net/oll3tyk.css");
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Source+Sans+3:ital,wght@0,600;1,200&display=swap');
+
+@font-face {
+    font-family: 'Altmann Grotesk Medium';
+    src: url('fonts/AltmannGrotesk-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'Titling Gothic Bold';
+    src: url('fonts/TitlingGothicFBWide-Bold.otf');
+}
+
+@font-face {
+    font-family: 'Titling Gothic Regular';
+    src: url('fonts/TitlingGothicFBWide-Reg.otf');
+}
+
+
 *, *::after, *::before {
     box-sizing: border-box;
 }
 
 :root {
     --min-padding: 5rem;
+    --orange: #C95512;
+    --green: #204A16;
+    --gray: rgba(0, 0, 0, .5)
 }
 
 body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: "Albra Grotesk Medium-Traced-Web";
+    font-family: 'Altmann Grotesk Medium';
 }
 
 header {
@@ -28,13 +51,26 @@ section {
 }
 
 h2 {
-    font-size: 6rem;
+    font-size: 11rem;
+    /* font-size: 6rem; */
     text-transform: uppercase;
+    letter-spacing: .4rem;
+    line-height: 1;
 }
 
 h3 {
     font-size: 2rem;
     text-transform: uppercase;
+}
+
+h5 {
+    font-size: 1.5rem;
+}
+
+p {
+    font-family: "acumin-variable", sans-serif;
+    font-size: 1.25rem;
+    text-align: justify;
 }
 
 ul {
@@ -43,22 +79,57 @@ ul {
     padding: 0;
 }
 
+small {
+    font-family: 'Roboto', sans-serif;
+    font-size: .85rem;
+}
+
 .legenda {
     display: block;
+    font-family: 'Source Sans 3', sans-serif;
+    font-style: italic;
+}
+
+.quote {
+    font-family: "acumin-variable", sans-serif;
+    text-align: right;
+    display: block;
+    font-style: normal;
+}
+
+.bold {
+    font-weight: 600;
+}
+
+.green {
+    color: var(--green);
 }
 
 .top-bar--wrapper {
-    width: 100%;
-    padding: 1rem var(--min-padding);
+    padding: 2rem var(--min-padding) 0;
 
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.top-bar--wrapper h5,
-.top-bar--wrapper p {
-    margin: 0;
+.top-bar--wrapper .logo {
+    text-align: center;
+    width: 7rem;
+}
+
+.top-bar--wrapper h5 {
+    text-transform: uppercase;
+    line-height: .8;
+    margin: .5rem 0 0;
+}
+
+.top-bar--wrapper .address {
+    text-align: left;
+}
+
+.top-bar--wrapper .contact {
+    text-align: right;
 }
 
 .navigation {
@@ -68,7 +139,7 @@ ul {
 .nav-list {
     position: relative;
     width: 80%;
-    max-width: 1000px;
+    /* max-width: 1000px; */
     margin: auto;
     
     display: grid;
@@ -76,12 +147,13 @@ ul {
     row-gap: 1rem;
 
     text-transform: uppercase;
+    font-family: "Albra Grotesk Medium-Traced-Web";
     /* font-size: 4rem; */
 }
 
 @media screen and (min-width: 1150px) {
     .nav-list {
-        font-size: 5rem;
+        font-size: 7rem;
     }
 }
 
@@ -147,24 +219,58 @@ header .row-4 {
     z-index: -1;
 }
 
-.historia-section {
+/* .historia-section {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     grid-template-areas: 
         "historia-titulo historia-titulo"
         "historia-graphic historia-graphic"
         "historia-texto historia-texto"
         "historia-image historia-image";
+} */
+
+.historia-section .row-1 {
+    display: flex;
+}
+
+.historia-section .row-2 {
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+    background-color: var(--orange);
+    padding: var(--min-padding) var(--min-padding);
+}
+
+.historia-section .row-2 > * {
+    width: 30%;
 }
 
 .historia-graphic {
-    grid-area: historia-graphic;
-    background-color: red;
-    min-height: 5rem;
+    /* grid-area: historia-graphic; */
+    width: 45%;
+    padding: 0 var(--min-padding);
+    /* min-height: 5rem; */
 }
 
 .historia-title--wrapper {
+    text-align: right;
+}
+
+.historia-image {
+    text-align: right;
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30%, var(--orange) 30%);
+}
+
+.historia-image > img {
+    width: 80vw;
+}
+
+.historia-image > .legenda {
+    padding-right: var(--min-padding);
+}
+
+/* .historia-title--wrapper {
     grid-area: historia-titulo;
     text-align: right;
 }
@@ -202,10 +308,10 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
 
 .historia-section .legenda {
     margin-right: 2rem;
-}
+} */
 
 @media screen and (min-width: 740px) {
-    .historia-section {
+    /* .historia-section {
         grid-template-areas: 
             "historia-graphic historia-titulo"
             " . historia-texto"
@@ -215,275 +321,153 @@ background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 30
 
     .historia-text--wrapper {
         flex-direction: row;
-    }
+    } */
 }
 
-.projetos-section {
+.energia-section {
+    display: flex;
+    /* flex-direction: column; MOBILE*/
+    flex-direction: row;
+    gap: 1rem;
+    padding-right: var(--min-padding)
+}
+
+/* .energia-grid--container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 0 var(--min-padding)
+} MOBILE */
+
+.energia-grid--container {
+    aspect-ratio: 1/1;
+    display: grid;
+    grid-template-columns: repeat(15, minmax(0, 1fr));
+    grid-template-rows: repeat(15, minmax(0, 1fr));
 }
 
-.projetos-section p {
-    text-align: justify;
-}
-
-.projetos-grid--container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.projetos-grid--container > * {
+.energia-grid--container > * {
     margin: 0;
 }
 
-.projetos-grid--container span.legenda {
+.energia-grid--container span.legenda {
     margin-top: 1rem;
     text-align: right;
 }
 
-.projetos-grid--container small.legenda {
+.energia-grid--container small.legenda {
     margin-left: var(--min-padding);
 }
 
 .title {
-    letter-spacing: .4rem;
-    font-size: 4rem;
+    grid-column-start: 2;
+    /* letter-spacing: .4rem; */
+    /* font-size: 4rem; */
 }
 
 .subtitle {
-    font-size: 1.5rem;
+    grid-column-start: 10;
+    grid-column-end: 16;
+
+    grid-row-start: 4;
+    font-family: "Albra Grotesk Medium-Traced-Web";
+    font-size: 3.3rem;
+}
+
+.p1 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+
+    grid-row-start: 5;
+}
+
+.p2 {
+    grid-column-start: 5;
+    grid-column-end: 9;
+
+    grid-row-start: 7;
+}
+
+.p3 {
+    grid-column-start: 10;
+    grid-column-end: 15;
+
+    grid-row-start: 7;
+
+    font-style: italic;
+}
+
+.p4 {
+    grid-column-start: 10;
+    grid-column-end: 15;
+
+    grid-row-start: 11;
+}
+
+.image {
+    grid-column-start: 1;
+    grid-column-end: 9;
+
+    grid-row-start: 10;
+}
+
+.image img {
+    width: 100%;
+    height: auto;
+}
+
+.energia-section .quote {
+    position: relative;
+}
+
+.energia-section .quote::before {
+    position: absolute;
+    content: '';
+    background-color: var(--gray);
+    height: 1px;
+    width: 80%;
+    bottom: 5px;
+    right: 50%;
+    z-index: -1;
 }
 
 .timeline {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-end;
     width: 100%;
     text-align: right;
     position: relative;
     margin-right: var(--min-padding);
+    margin-bottom: 3rem;
 }
 
-.timeline >  *:not(.logo) {
+/* .timeline >  *:not(.logo) {
     margin-right: 1rem;
+} */
+
+.timeline > .logo {
+    height: 2rem;
+    width: 2rem;
 }
 
-.timeline .logo::before {
+.timeline::before {
     position: absolute;
     content: '';
-    height: 85%;
-    top: 4.5%;
-    bottom: 0;
+    top: 3%;
+    bottom: 4.5%;
     right: 1rem;
 
-    background-color: black;
+    background-color: var(--gray);
     width: 1px;
+    z-index: -1;
 }
 
-@media screen and (min-width: 750px) {
-    .projetos-section {
-        flex-direction: row;
-    }
+.timeline h3 {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-@media screen and (min-width: 800px) {
-    .projetos-grid--container {
-        display: grid;
-        aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr));
-        grid-template-rows: repeat(90, minmax(0, 1fr));
-        gap: 0;
-    }
-
-    .title {
-        grid-column: 5 / 15;
-        grid-row: 1 / 3;
-    }
-    
-    .subtitle {
-        line-height: 1.3;
-        grid-column: 31 / 48;
-        grid-row: 1 / 15;
-    }
-    
-    .p1 {
-        grid-column: 5 / 25;
-        grid-row: 22 / 35;
-    }
-    
-    .p2 {
-        grid-column: 5 / 25;
-        grid-row: 37 / 50;
-    }
-    
-    .p3 {
-        grid-column: 28 / 48;
-        grid-row: 22 / 60;
-    }
-    
-    .p4 {
-        grid-column: 28 / 48;
-        grid-row: 60 / -1;
-    }
-    
-    .image {
-        grid-column: 1 / 25;
-        grid-row: 60 / -1;
-        background-color: black;
-        border: 1px solid black;
-    }
-}
-
-@media screen and (min-width: 860px) {
-    .projetos-grid--container {
-        /* display: grid;
-        aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr)); */
-        grid-template-rows: repeat(25, minmax(0, 1fr));
-        /* gap: 0; */
-    }
-
-    .title {
-        grid-column: 7 / 15;
-        /* grid-row: 1 / 3; */
-
-        font-size: 5rem;
-    }
-    
-    .subtitle {
-        grid-column: 28 / 48;
-        grid-row: 4 / 6;
-    }
-    
-    .p1 {
-        grid-column: 8 / 25;
-        grid-row: 9 / 30;
-    }
-    
-    .p2 {
-        grid-column: 8 / 25;
-        grid-row: 13 / 35;
-    }
-    
-    .p3 {
-        /* grid-column: 28 / 48; */
-        grid-row: 9 / 35;
-    }
-    
-    .p4 {
-        /* grid-column: 28 / 48; */
-        grid-row: 20 / -1;
-    }
-    
-    .image {
-        /* grid-column: 1 / 25; */
-        grid-row: 18 / -1;
-        /* background-color: black;
-        border: 1px solid black; */
-    }
-}
-
-@media screen and (min-width: 900px) {
-    .projetos-grid--container {
-        /* display: grid;
-        aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr)); */
-        grid-template-rows: repeat(20, minmax(0, 1fr));
-        /* gap: 0; */
-    }
-
-    /* .title {
-        grid-column: 7 / 15;
-        grid-row: 1 / 3;
-
-        font-size: 5rem;
-    } */
-    
-    .subtitle {
-        /* grid-column: 28 / 48; */
-        grid-row: 3 / 6;
-    }
-    
-    .p1 {
-        /* grid-column: 8 / 25; */
-        grid-row: 6 / 30;
-    }
-    
-    .p2 {
-        /* grid-column: 8 / 25; */
-        grid-row: 9 / 35;
-    }
-    
-    .p3 {
-        /* grid-column: 28 / 48; */
-        grid-row: 6 / 35;
-    }
-    
-    .p4 {
-        /* grid-column: 28 / 48; */
-        grid-row: 14 / -1;
-    }
-    
-    .image {
-        /* grid-column: 1 / 25; */
-        grid-row: 13 / -1;
-        /* background-color: black;
-        border: 1px solid black; */
-    }
-}
-
-@media screen and (min-width: 990px) {
-    .projetos-grid--container {
-        /* display: grid;
-        aspect-ratio: 1 / 1;
-        grid-template-columns: repeat(50, minmax(0, 1fr)); */
-        grid-template-rows: repeat(15, minmax(0, 1fr));
-        /* gap: 0; */
-    }
-
-    .title {
-        line-height: .9;
-        /* grid-column: 7 / 15; */
-        /* grid-row: 1 / 3; */
-    }
-    
-    .subtitle {
-        grid-column: 28 / 47;
-        /* grid-row: 3 / 6; */
-
-        font-size: 2rem;
-    }
-    
-    .p1 {
-        grid-column: 11 / 25;
-        grid-row: 4 / 30;
-    }
-    
-    .p2 {
-        grid-column: 11 / 25;
-        grid-row: 6 / 35;
-    }
-    
-    .p3 {
-        grid-column: 28 / 47;
-        /* grid-row: 6 / 35; */
-    }
-    
-    .p4 {
-        grid-column: 28 / 45;
-        grid-row: 10 / -1;
-    }
-    
-    .image {
-        /* grid-column: 1 / 25; */
-        grid-row: 9 / -1;
-        /* background-color: black;
-        border: 1px solid black; */
-    }
-}
 
 .realizacoes-section,
 .clientes-section,
