--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@
     --gray: rgba(0, 0, 0, .5)
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     box-sizing: border-box;
     padding: 0;
@@ -47,32 +51,30 @@ header {
 }
 
 section {
-    /* max-width: 1050px; */
     margin-top: 10rem;
 }
 
 h2 {
-    font-size: 11rem;
-    /* font-size: 6rem; */
+    font-size: 5rem;
     text-transform: uppercase;
     line-height: 1;
     margin: 0 auto;
 }
 
 h3 {
-    font-size: 5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     margin-top: 0;
     padding-left: 3rem;
 }
 
 h4 {
-    font-size: 2rem;
+    font-size: 1rem;
     text-transform: uppercase;
 }
 
 h5 {
-    font-size: 1.5rem;
+    font-size: 1rem;
     text-transform: uppercase;
     line-height: .8;
     margin: .5rem 0 0;
@@ -102,7 +104,7 @@ ul {
 
 small {
     font-family: 'Roboto', sans-serif;
-    font-size: .85rem;
+    font-size: .75rem;
 }
 
 figure {
@@ -113,6 +115,30 @@ figcaption {
     font-family: 'Source Sans 3', sans-serif;
     font-style: italic;
     padding: 0 var(--min-padding);
+}
+
+@media screen and (min-width: 880px) {
+    h2 {
+        font-size: 11rem;
+        
+    }
+    
+    h3 {
+        font-size: 5rem;
+    }
+    
+    h4 {
+        font-size: 2rem;
+    }
+    
+    h5 {
+        font-size: 1.5rem;
+    }
+
+    small {
+        font-size: .85rem;
+    }
+    
 }
 
 .section-padding {
@@ -144,25 +170,41 @@ figcaption {
 
 /* HEADER */
 /* 1. Top Bar */
-.top-bar--wrapper {
-    padding: 2rem var(--min-padding) 0;
-
+.top-bar {
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.top-bar--wrapper .logo {
+.top-bar .logo {
     text-align: center;
     width: 7rem;
+    margin: auto;
 }
 
-.top-bar--wrapper .left {
+.top-bar .left,
+.top-bar .right {
+    display: none;
+}
+
+.top-bar .left {
     text-align: left;
 }
 
-.top-bar--wrapper .right {
+.top-bar .right {
     text-align: right;
+}
+
+@media screen and (min-width: 740px) {
+    .top-bar {
+        padding: 2rem var(--min-padding) 0;
+    }
+    
+    .top-bar .left,
+    .top-bar .right {
+        display: block;
+    }
 }
 
 /* 2. Navigation */
@@ -173,7 +215,6 @@ figcaption {
 .nav-list {
     position: relative;
     width: 80%;
-    /* max-width: 1000px; */
     margin: auto;
     
     display: grid;
@@ -182,13 +223,16 @@ figcaption {
 
     text-transform: uppercase;
     font-family: "Albra Grotesk Medium-Traced-Web";
-    /* font-size: 4rem; */
+    font-size: 3rem;
 }
 
-@media screen and (min-width: 1150px) {
-    .nav-list {
-        font-size: 7rem;
-    }
+.nav-link {
+    transition: all .5s ease;
+}
+
+.nav-link:hover {
+    color: white;
+    -webkit-text-stroke: 1px black;
 }
 
 .nav-row {
@@ -197,21 +241,19 @@ figcaption {
     gap: 1rem;
 }
 
-.nav-row span {
+.nav-link--wrapper {
+    display: flex;
+    gap: 1rem;
+}
+
+.nav-row span.one-row {
     display: none;
 }
 
-@media screen and (min-width: 880px) {
-    .nav-row {
-        flex-direction: row;
-    }
-
-    .nav-row span {
-        display: inline-block;
-        width: 100%;
-        height: 78%;
-        border: 0.7px solid rgba(0, 0, 0, .5);
-    }
+.nav-row span.two-rows {
+    display: inline;
+    width: 100%;
+    border: 0.7px solid var(--gray);
 }
 
 .nav-row:nth-child(1),
@@ -224,9 +266,59 @@ figcaption {
     justify-content: space-around;
 }
 
+.nav-row:nth-child(1) .nav-link:nth-of-type(1),
+.nav-row:nth-child(3) .nav-link:nth-of-type(1) {
+    align-self: flex-start;
+    position: relative;
+}
+
+.nav-row:nth-child(1) .nav-link:nth-of-type(2),
+.nav-row:nth-child(3) .nav-link:nth-of-type(2) {
+    align-self: flex-end;
+    position: relative;
+}
+
+.nav-row:nth-child(2) .nav-link,
+.nav-row:nth-child(4) .nav-link {
+    align-self: center;
+}
+
 .header-graphic {
-    width: 50%;
+    width: 70%;
     margin: auto;
+}
+
+@media screen and (min-width: 880px) {
+    .nav-row {
+        flex-direction: row;
+    }
+
+    .nav-row span.one-row {
+        display: inline-block;
+        width: 100%;
+        height: 78%;
+        border: 0.7px solid var(--gray);
+    }
+    
+    .nav-row span.two-rows {
+        display: none;
+    }
+
+    .header-graphic {
+        width: 50%;
+    }
+}
+
+@media screen and (min-width: 1140px) {
+    .nav-list {
+        font-size: 5rem;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .nav-list {
+        font-size: 7rem;
+    }
 }
 
 /* HISTORY SECTION */
@@ -423,6 +515,7 @@ figcaption {
     margin: 0 auto;
 }
 
+/* CLIENTS SECTION */
 .clients-title--wrapper {
     background-image: url(img/clientes.svg);
     background-repeat: no-repeat;
@@ -463,6 +556,7 @@ figcaption {
     display: inline-block;
 }
 
+/* SUPPLIERS SECTION */
 .suppliers-section h3 {
     position: relative;
 }
@@ -492,6 +586,7 @@ figcaption {
     height: 7.5rem;
 }
 
+/* SERVICES SECTION */
 .services-section h2 {
     line-height: 1;
     border: 1px solid var(--gray);
@@ -529,6 +624,7 @@ figcaption {
     top: 50%;
 }
 
+/* STRUCTURE SECTION */
 .structure-section {
     min-height: 40vh;
     padding-bottom: 10rem;
@@ -555,13 +651,14 @@ figcaption {
     align-self: center;
 }
 
-.address-section {
+/* PHOTO SECTION */
+.photo-section > div:nth-child(1) {
     border: 1px solid var(--gray);
     padding-top: 2rem;
     padding-bottom: 2rem
 }
 
-.end-section {
+.photo-section > div:nth-child(2) {
     margin-top: 0;
     min-height: 100vh;
     background-image: url(img/historia-placeholder.jpg);
@@ -570,11 +667,12 @@ figcaption {
     align-items: flex-end;
 }
 
-.end-section > img {
+.photo-section img {
     height: 20rem;
     width: auto;
 }
 
+/* FOOTER */
 footer {
     display: flex;
     justify-content: flex-end;
