--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h5 {
     font-size: 1rem;
     text-transform: uppercase;
     line-height: .8;
-    margin: .5rem 0 0;
+    margin: 1rem 0 0;
 }
 
 h6 {
@@ -132,7 +132,7 @@ figcaption {
     }
     
     h5 {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     small {
@@ -175,6 +175,9 @@ figcaption {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    background-color: white;
+    height: fit-content;
+    z-index: 2;
 }
 
 .top-bar .logo {
@@ -198,7 +201,7 @@ figcaption {
 
 @media screen and (min-width: 740px) {
     .top-bar {
-        padding: 2rem var(--min-padding) 0;
+        padding: 2rem var(--min-padding);
     }
     
     .top-bar .left,
