--- a/style.css
+++ b/style.css
@@ -28,7 +28,24 @@
     --min-padding: 5rem;
     --orange: #C95512;
     --green: #204A16;
-    --gray: rgba(0, 0, 0, .5)
+    --gray: rgba(0, 0, 0, .5);
+
+    --font-family-headings: 'Altmann Grotesk Medium', sans-serif;
+    --font-family-body: 'acumin-variable', sans-serif; 
+    --font-family-thin: 'Roboto', sans-serif;
+    --font-family-nav: 'Albra Grotesk Medium-Traced-Web';
+
+    --font-size-xl: clamp(6rem, 0.068rem + 18.983vw, 20rem); /*6rem - 20rem: .large.number*/
+    --font-size-l: clamp(4rem, -0.237rem + 13.559vw, 14rem); /*4rem - 14rem: .medium.number*/
+    --font-size-0: clamp(4rem, 1.034rem + 9.492vw, 11rem); /*4rem - 11rem: .large-title*/
+    --font-size-1: clamp(3.5rem, 1.169rem + 7.458vw, 9rem); /*3.5rem - 9rem: .title, h2*/
+    --font-size-2: clamp(3rem, 0.881rem + 6.78vw, 8rem); /*3rem - 8rem: .small-title, .nav-list*/
+    --font-size-3: clamp(1.5rem, 0.758rem + 2.373vw, 3.25rem); /*1.5rem - 3.25rem: h3*/
+    --font-size-4: clamp(1.25rem, 0.932rem + 1.017vw, 2rem); /*1.25rem - 2rem: h4*/
+    --font-size-5: clamp(1rem, 0.788rem + 0.678vw, 1.5rem); /*1rem 1.5rem: list-item, h5*/
+    --font-size-body: 1.15; /*p*/
+    --font-size-6: 1rem; /*contato, h6*/
+    --font-size-7: .80rem; /*small*/
 }
 
 html {
@@ -39,7 +56,8 @@ body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Altmann Grotesk Medium';
+    font-family: var(--font-family-body);
+    font-size: var(--font-size-body);
     letter-spacing: 0.056em;
 }
 
@@ -54,34 +72,42 @@ section {
     margin-top: 10rem;
 }
 
-h2 {
-    font-size: 5rem;
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-headings);
     text-transform: uppercase;
+}
+
+h2 {
+    font-size: var(--font-size-1);
     line-height: 1;
     margin: 0 auto;
 }
 
+h2.large-title {
+    font-size: var(--font-size-0);
+}
+
+h2.small-title {
+    font-size: var(--font-size-2);
+}
+
 h3 {
-    font-size: 2rem;
-    text-transform: uppercase;
+    font-size: var(--font-size-3);
     margin-top: 0;
-    padding-left: 3rem;
 }
 
 h4 {
-    font-size: 1rem;
-    text-transform: uppercase;
+    font-size: var(--font-size-4);
 }
 
 h5 {
-    font-size: 1rem;
-    text-transform: uppercase;
+    font-size: var(--font-size-5);
     line-height: .8;
     margin: 1rem 0 0;
 }
 
 h6 {
-    text-transform: uppercase;
+    font-size: var(--font-size-6);
     margin: 1rem auto .5rem;
 }
 
@@ -92,7 +118,7 @@ a {
 
 p {
     font-family: "acumin-variable", sans-serif;
-    font-size: 1.25rem;
+    /* font-size: 1.25rem; */
     text-align: justify;
 }
 
@@ -103,8 +129,8 @@ ul {
 }
 
 small {
-    font-family: 'Roboto', sans-serif;
-    font-size: .75rem;
+    font-family: var(--font-family-thin);
+    font-size: var(--font-size-7);
 }
 
 figure {
@@ -118,12 +144,12 @@ figcaption {
 }
 
 @media screen and (min-width: 880px) {
-    h2 {
+    /* h2 {
         font-size: 11rem;
         
     }
-    
-    h3 {
+     */
+    /* h3 {
         font-size: 5rem;
     }
     
@@ -137,7 +163,7 @@ figcaption {
 
     small {
         font-size: .85rem;
-    }
+    } */
     
 }
 
@@ -217,7 +243,6 @@ figcaption {
 
 .nav-list {
     position: relative;
-    width: 80%;
     margin: auto;
     
     display: grid;
@@ -226,7 +251,7 @@ figcaption {
 
     text-transform: uppercase;
     font-family: "Albra Grotesk Medium-Traced-Web";
-    font-size: 3rem;
+    font-size: var(--font-size-2);
 }
 
 .nav-link {
@@ -311,7 +336,7 @@ figcaption {
         width: 50%;
     }
 }
-
+/* 
 @media screen and (min-width: 1140px) {
     .nav-list {
         font-size: 5rem;
@@ -322,7 +347,7 @@ figcaption {
     .nav-list {
         font-size: 7rem;
     }
-}
+} */
 
 /* HISTORY SECTION */
 .section-row:nth-child(1) {
@@ -393,20 +418,21 @@ figcaption {
     margin: 0;
 }
 
+.energy-section span {
+    grid-column-start: 2;
+}
+
 .energy-section h2 {
     grid-column-start: 2;
-    /* font-size: 4rem; */
+
+    grid-row-start: 1;
 }
 
-.energy-section h4 {
+.energy-section h3 {
     grid-column-start: 10;
     grid-column-end: 16;
-
     grid-row-start: 4;
-    font-family: "Albra Grotesk Medium-Traced-Web";
-    font-size: 3.3rem;
 }
-
 .energy-section p:nth-of-type(1) {
     grid-column-start: 5;
     grid-column-end: 9;
@@ -512,7 +538,6 @@ figcaption {
 
 .services-section h2,
 .projects-section h2 {
-    font-size: 8rem;
     text-align: right;
     word-break: break-all;
     margin: 0 auto;
@@ -550,12 +575,12 @@ figcaption {
 
 .large.number {
     text-align: center;
-    font-size: 20rem;
+    font-size: var(--font-size-xl);
     line-height: 1;
 }
 
 .medium.number {
-    font-size: 14rem;
+    font-size: var(--font-size-l);
     display: inline-block;
 }
 
@@ -609,9 +634,9 @@ figcaption {
 }
 
 .list-item {
-    font-size: 1.5rem;
+    font-size: var(--font-size-5);
     text-transform: uppercase;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-family-thin);
     line-height: 2;
     position: relative;
     width: 100%;
