--- a/style.css
+++ b/style.css
@@ -398,7 +398,6 @@ figcaption {
 .energy-section {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 
 .energy-grid--container {
@@ -457,14 +456,14 @@ figcaption {
 
 .timeline {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    width: 100%;
+    /* width: 100%; */
     text-align: right;
     position: relative;
-    margin-right: var(--min-padding);
-    margin-bottom: 3rem;
+    margin: 0 var(--min-padding);
+    /* margin-bottom: 3rem; */
 }
 
 /* .timeline >  *:not(.logo) {
@@ -480,12 +479,11 @@ figcaption {
 .timeline::before {
     position: absolute;
     content: '';
-    top: 4%;
-    bottom: 5.5%;
-    /* right: 1rem; */
+    bottom: 0;
 
     background-color: var(--gray);
-    width: 1px;
+    width: 100%;
+    height: 1px;
     z-index: -1;
 }
 
@@ -501,7 +499,7 @@ figcaption {
         grid-template-rows: repeat(6, auto);
 
         padding: 0;
-        padding-right: calc(var(--min-padding) / 2);
+        padding-right: calc(var(--min-padding) / 1.5);
     }
 
     .energy-section h2 {
@@ -553,7 +551,7 @@ figcaption {
     .energy-grid--container {
         display: grid;
         grid-template-columns: repeat(15, minmax(0, 1fr));
-        grid-template-rows: repeat(85, minmax(0, 1fr));
+        grid-template-rows: repeat(72, minmax(0, 1fr));
 
         padding: 0;
         padding-right: calc(var(--min-padding) / 2);
@@ -595,6 +593,31 @@ figcaption {
         grid-column-start: 1;
         grid-column-end: 9;
     }
+
+    .timeline {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        text-align: right;
+        position: relative;
+        margin-right: var(--min-padding);
+        margin-left: 0;
+        margin-bottom: 3rem;
+    }
+
+    .timeline::before {
+        position: absolute;
+        content: '';
+        top: 4%;
+        bottom: 5.5%;
+    
+        background-color: var(--gray);
+        width: 1px;
+        height: 90%;
+        z-index: -1;
+    }
+    
 }
 
 @media screen and (min-width: 1000px) {
@@ -770,6 +793,32 @@ figcaption {
     }
 }
 
+@media screen and (min-width: 1500px) {
+
+
+    .energy-section p:nth-of-type(1) {    
+        grid-row-start: 17;
+    }
+
+    .energy-section p:nth-of-type(2) {    
+        grid-row-start: 23;
+    }
+
+    .energy-section p:nth-of-type(3) {    
+        grid-row-start: 23;
+        grid-column-end: 14;
+    }
+
+    .energy-section p:nth-of-type(4) {    
+        grid-column-end: 13;
+        grid-row-start: 36;
+    }
+
+    .energy-section figure {
+        grid-row-start: 32;
+        /* grid-column-end: 8; */
+    }
+}
 /* PROJECTS SECTION */
 .projects-section {
     background-image: url(img/projetos.svg);
