--- a/style.css
+++ b/style.css
@@ -448,7 +448,8 @@ figcaption {
 
 
 .energy-section figure > img {
-    width: 100%;
+    /* width: 100%; */
+    width: 80vw;
     height: auto;
 }
 
