--- a/style.css
+++ b/style.css
@@ -435,8 +435,7 @@ figcaption {
 
 
 .energy-section figure > img {
-    /* width: 100%; */
-    width: 80vw;
+    width: 100%;
     height: auto;
 }
 
