--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ figcaption {
 .energy-grid--container {
     /* display: flex; */
     /* flex-direction: column; */
+    display: grid;
     grid-template-columns: 1fr;
     width: 100%;
     gap: 1rem;
