energy-grid-container padding

--- a/style.css
+++ b/style.css
@@ -413,7 +413,7 @@ figcaption {
 } 
 
 .energy-grid--container > *:not(figure) {
-    padding: 0 calc(var(--min-padding) / 2);
+    padding: 0 var(--min-padding);
     margin: 0;
 }
 
