timeline items flex on desktop

--- a/style.css
+++ b/style.css
@@ -606,6 +606,10 @@ figcaption {
         margin-bottom: 3rem;
     }
 
+    .timeline > * {
+        flex: 0;
+    }
+
     .timeline h4 {
         text-align: right;
     }
