--- a/style.css
+++ b/style.css
@@ -989,6 +989,7 @@ figcaption {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 2rem;
 }
 
